After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692698 - opusenc: crash when setting "cbr" property
opusenc: crash when setting "cbr" property
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal critical
: 1.0.6
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-01-28 11:48 UTC by Martin Brodbeck
Modified: 2013-01-29 09:48 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Martin Brodbeck 2013-01-28 11:48:13 UTC
It's not possible to use VBR with oggenc since it crashes if you try to use cbr=false.

For example:
gst-launch audiotestsrc wave=sine num-buffers=100 ! audioconvert ! opusenc ! oggmux ! filesink location=sine.opus
works without any problems.

But it is not possible to use the cbr option. cbr=false and even cbr=true causes a crash:
gst-launch audiotestsrc wave=sine num-buffers=100 ! audioconvert ! opusenc cbr=false ! oggmux ! filesink location=sine.opus
Comment 1 Tim-Philipp Müller 2013-01-28 11:58:07 UTC
Confirmed with git master:

$ gst-launch-1.0 audiotestsrc wave=sine num-buffers=100 ! audioconvert ! opusenc cbr=false ! oggmux ! filesink location=sine.opus
Caught SIGSEGV accessing address 0x4
  • #0 __libc_waitpid
  • #1 g_on_error_stack_trace
  • #2 fault_spin
    at gst-launch.c line 139
  • #3 fault_handler_sigaction
  • #4 <signal handler called>
  • #5 opus_multistream_encoder_ctl
  • #6 gst_opus_enc_set_property
  • #7 object_set_property
  • #8 g_object_set_property
  • #9 gst_parse_element_set
  • #10 priv_gst_parse_yyparse
  • #11 priv_gst_parse_launch
  • #12 gst_parse_launch_full
  • #13 gst_parse_launchv_full
  • #14 gst_parse_launchv
  • #15 main

Comment 2 Tim-Philipp Müller 2013-01-28 14:54:08 UTC
Thanks, should be fixed in git, and in the upcoming 1.0.6 release:

 commit 32893dd95ed218fbd23afd48bbdb582b686a773e
 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
 Date:   Mon Jan 28 14:12:56 2013 +0000

    opusenc: fix crash when setting "cbr" property when encoder is not running yet
    
    https://bugzilla.gnome.org/show_bug.cgi?id=692698
Comment 3 Martin Brodbeck 2013-01-29 08:36:01 UTC
Sorry to ask another question: Is this bug going to be fixed in 0.10 branch as well?
Comment 4 Tim-Philipp Müller 2013-01-29 09:48:50 UTC
> Sorry to ask another question: Is this bug going to be fixed in 0.10 branch as
> well?

It didn't apply cleanly, so I skipped it. 0.10 is not maintained any longer, and there probably won't be any more releases.

0.10:

commit 544be970edfacc10ae95cd3b6d9a2236edaa625e
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Mon Jan 28 14:12:56 2013 +0000

    opusenc: fix crash when setting "cbr" property when encoder is not running yet
    
    https://bugzilla.gnome.org/show_bug.cgi?id=692698
    
    Conflicts:
        ext/opus/gstopusenc.c