opusenc: fix crash when setting "cbr" property when encoder is not running yet

https://bugzilla.gnome.org/show_bug.cgi?id=692698